Register section/form add
Here I added the register section and a form with values.
register button works and adds new line to form.
added css/js

--- a/index.html
+++ b/index.html
@@ -5,16 +5,54 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
         <title>Pet Salon</title>
     </head>
     <body>
 
         <header>
-
+            <section class="header">
+                <nav>
+                    <a href="index.html"><img src="../img/logos.png"></a>
+                    <div class="nav-links" id="navlinks">
+                        <i class=" fa fa-solid fa-xmark" onclick="hidemenu()"></i>
+                        <ul>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="register.html">Register</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div> 
+                    <i class=" fa fa-solid fa-bars" onclick="showmenu()"></i>
+                </nav>
+                <div class="text-box">
+                    <h1> The Pet Salon is your one stop shop for pet care!</h1>
+                    <p>Proffesional Staff, Highly Qualified<br> Stop in and enjoy the best pet care available</p>
+                    <a href="" class="hero-btn">Visit us</a>
+                </div>
+                
+            </section>
         </header>
 
         <main>
+            <main class="About">
+                <H2>We have been in buisness since 1999</H2>
+                <p>We put your pets first! We realize that most pet shops do not put the care your pet deserves. We have highly trained, Proffesional staff, who have been working in the animale field for over a decade plus of experience.</p>
+                <div class="container">
+                    <a href="index.html"><img class="images" src="../img/petclean.jpeg"></a>
+                    <a href="index.html"><img class="images" src="img/cut2.jpeg"></a>
+                    <a href="index.html"><img class="images" src="img/dry.jpg"></a>
+                </div>
+            </main>
+            <main class="Register">
 
+            </main>
         </main>
 
         <footer>
