Update to table, html, and css
complete working table with JS and style

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         <main>
             <main class="About">
-                <H2>We have been in buisness since 1999</H2>
-                <p>We put your pets first! We realize that most pet shops do not put the care your pet deserves. We have highly trained, Proffesional staff, who have been working in the animale field for over a decade plus of experience.</p>
+                <H2 class="us">We have been in buisness since 1999</H2>
+                <p class="us">We put your pets first! We realize that most pet shops do not put the care your pet deserves. We have highly trained, Proffesional staff, who have been working in the animale field for over a decade plus of experience.</p>
                 <div class="container">
                     <a href="index.html"><img class="images" src="../img/petclean.jpeg"></a>
                     <a href="index.html"><img class="images" src="img/cut2.jpeg"></a>
