finale Pet Salon working Table
working full table
search function for table
clear table function

--- a/register.html
+++ b/register.html
@@ -76,37 +76,43 @@
                         <th>Service</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
+                <tbody id="bodyTable">
+                   <!---- <tr id="0">
                         <td>Sammy</td>
                         <td>3</td>
                         <td>male</td>
                         <td>Boxer</td>
                         <td>Nails</td>
                     </tr>
-                    <tr>
+                    <tr id="1">
                         <td>Sarge</td>
                         <td>8</td>
                         <td>male</td>
                         <td>Pet Breed</td>
                         <td>Grooming</td>
                     </tr>
-                    <tr>
+                    <tr id="2">
                         <td>Army</td>
                         <td>10</td>
                         <td>female</td>
                         <td>Pet Breed</td>
                         <td>Wash</td>
                     </tr>
-                    <tr>
+                    <tr id="3">
                         <td>Rambo</td>
                         <td>15</td>
                         <td>male</td>
                         <td>Pet Breed</td>
                         <td>Full Service</td>
-                    </tr>
+                    </tr>-->!
                 </tbody>
             </table>
+            
+        </div>
+
+        <div>
+            <input type="text" id="txtSearch"placeholder="Enter Name">
+            <button onclick="searchPet()">Search</button>
             
         </div>
 
